# ik_jetcobot

april_tag_detect/: package.xml  setup.py
april_tag_detect/scripts/: april_tag_node.py
jetcobot_design/: CMakeLists.txt  package.xml
jetcobot_design/launch/: robot_state.launch.py
jetcobot_design/urdf/: jetcobot.urdf
mycobot_pick_place/: package.xml  setup.cfg  setup.py
mycobot_pick_place/scripts/: pick_place_node.py
