<?xml version="1.0"?>
<package format="3">
  <name>april_tag_detect</name>
  <version>0.0.1</version>
  <description>AprilTag detection node for MyCobot camera with Flask streaming</description>
  <maintainer email="bjhee0430@gmail.com">bjh</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
